k8s/valkey.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: valkey
  namespace: playground
spec:
  serviceName: valkey
  replicas: 1
  selector:
    matchLabels:
      app: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      containers:
        - name: valkey
          image: valkey/valkey:8-alpine
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: valkeydata
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: valkeydata
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
