k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-server
  namespace: playground
spec:
  selector:
    app: api-server
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30080
  type: NodePort
