k8s/auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-server
  namespace: playground
spec:
  selector:
    app: auth-server
  ports:
    - port: 80
      targetPort: 3002
      nodePort: 30082
  type: NodePort
