k8s/valkey-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: playground
spec:
  selector:
    app: valkey
  ports:
    - port: 6379
      targetPort: 6379
