k8s/ws-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: websocket-server
  namespace: playground
spec:
  selector:
    app: websocket-server
  ports:
    - port: 80
      targetPort: 3001
      nodePort: 30081
  type: NodePort
